[package]
name = "cralofo"
version = "0.1.0"
authors = ["Nils Sterz"]
edition = "2021"

[dependencies]
notify = "6.1.1"
log = "0.4.22"
env_logger = "0.11.5"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
regex = "1.7"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
