[package]
name = "cralofo"
version = "0.1.0"
authors = ["Nils Sterz"]
edition = "2021"

[dependencies]
notify = "6.1.1"
log = "0.4.22"
env_logger = "0.11.5"
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
regex = "1.7"
openssl = "0.10.66"
openssl-sys = { version = "0.9", features = ["vendored"] }
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
file-id = "0.2.1"
winapi = { version = "0.3", features = ["winbase", "handleapi", "fileapi"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

# [workspace.metadata.cross.target.x86_64-pc-windows-gnu]
# pre-build = [
#     # 'echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append',
#     "vcpkg install openssl:x64-windows-static-md"
# ]
